template variables renamed/cleaned up

--- a/src/main/resources/com/github/gradle-plugins/strapdownjs/default.html
+++ b/src/main/resources/com/github/gradle-plugins/strapdownjs/default.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-$htmlTitle
-$htmlPrefix
+$title
 
 <xmp theme="united" style="display:none;">
 $mdContent
 </xmp>
 
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
-
-$htmlSuffix
 </html>
